--- a/src/components/front_page/CardGalleryCarousel.css
+++ b/src/components/front_page/CardGalleryCarousel.css
@@ -5,3 +5,7 @@
 .ion-category-card-stack {
   background-color: darkgray;
 }
+
+.p1 {
+  border: 1px solid black;
+}
